# Econometrics-Guided-Learning

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
apps/: streamlit_app.py
configs/: census.yaml  census_panel.yaml  fred.yaml  recession.yaml
data/sample/: census_county_panel_sample.csv  census_county_sample.csv  gdp_quarterly_sample.csv  macro_quarterly_sample.csv  panel_monthly_sample.csv  sample_indicators.csv
docs/: index.md  technical_deep_dive.md
docs/cheatsheets/: causal_inference.md  classification_metrics.md  hypothesis_testing.md  model_comparison.md  regression_diagnostics.md
docs/guides/: index.md
notebooks/00_foundations/: 00_setup.ipynb  01_time_series_basics.ipynb  02_stats_basics_for_ml.ipynb
notebooks/00_statistics_primer/: 00_descriptive_statistics.ipynb  01_probability_distributions.ipynb  02_sampling_and_central_limit_theorem.ipynb  03_z_scores_and_standardization.ipynb  04_confidence_intervals.ipynb  05_hypothesis_testing_foundations.ipynb  06_common_statistical_tests.ipynb  07_correlation_and_covariance.ipynb  08_bayesian_vs_frequentist.ipynb
notebooks/_legacy/: 00_setup.ipynb  (+6 more)
reports/: capstone_report.md
scripts/: _common.py  build_datasets.py  fetch_census.py  fetch_fred.py  predict_recession.py  scaffold_curriculum.py  train_recession.py
src/: __init__.py  causal.py  census_api.py  data.py  econometrics.py  evaluation.py  features.py  fred_api.py  health_data.py  macro.py  models.py  plots.py
tests/: conftest.py  test_causal.py  test_econometrics.py  test_evaluation.py  test_features.py  test_macro.py
(+223 files in other folders)
